{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 29,
  "lineage": "47739345-85d9-236e-bcac-d9df64809be8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "westeurope",
            "name": "nsg1",
            "resource_group_name": "mark-testRG1",
            "security_rule": [],
            "tags": {
              "Project": "Terraform testing",
              "Responsible": "mark.tilleman@cegeka.com",
              "expireOn": "2025-02-14T15:21:43.6776325Z"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "westeurope",
            "name": "nsg2",
            "resource_group_name": "mark-testRG1",
            "security_rule": [],
            "tags": {
              "Project": "Terraform testing",
              "Responsible": "mark.tilleman@cegeka.com",
              "expireOn": "2025-02-14T15:21:43.8011403Z"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/networkSecurityGroups/nsg3",
            "location": "westeurope",
            "name": "nsg3",
            "resource_group_name": "mark-testRG1",
            "security_rule": [],
            "tags": {
              "Project": "Terraform testing",
              "Responsible": "mark.tilleman@cegeka.com",
              "expireOn": "2025-02-14T15:21:43.5236468Z"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/infra",
            "name": "infra",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mark-testRG1",
            "virtual_network_name": "example-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.example_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/vms",
            "name": "vms",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mark-testRG1",
            "virtual_network_name": "example-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.example_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/image",
            "name": "image",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mark-testRG1",
            "virtual_network_name": "example-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.example_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/infra",
            "network_security_group_id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "subnet_id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/infra"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.network",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.example_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/vms",
            "network_security_group_id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "subnet_id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/vms"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.network",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.example_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/image",
            "network_security_group_id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/networkSecurityGroups/nsg3",
            "subnet_id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet/subnets/image"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg3",
            "azurerm_resource_group.network",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.example_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6985ee72-d8d9-4460-9b6e-46cff151e18c",
            "id": "/subscriptions/ba416279-7011-41d0-a069-c6a8205d9232/resourceGroups/mark-testRG1/providers/Microsoft.Network/virtualNetworks/example-vnet",
            "location": "westeurope",
            "name": "example-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "mark-testRG1",
            "tags": {
              "Project": "Terraform testing",
              "Responsible": "mark.tilleman@cegeka.com",
              "expireOn": "2025-02-14T15:21:43.5545583Z"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}